unpackaged/main/default/objects/Bill_Run__c/Bill_Run__c.object-meta.xml
<CustomObject>
    <description>Bill Run object is used to schedule Billing Date. With that he is also setting Lock and Auto-Reconciliation Date. Also contains Calendar Type and Status fields.</description>
    <label>Bill Run</label>
    <nameField>
        <displayFormat>BR-{00000000}</displayFormat>
        <label>Bill Run No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bill Runs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>