unpackaged/main/default/objects/Bill_Run__c/fields/Auto_Reconciliation_Date__c.field-meta.xml
<CustomField>
    <fullName>Auto_Reconciliation_Date__c</fullName>
    <description>Date when Billing Schedule Auto-Reconciliation will occur.</description>
    <formula>Billing_Date__c + VALUE(TEXT(Auto_Reconciliation_Offset__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Date when Billing Schedule Auto-Reconciliation will occur.</inlineHelpText>
    <label>Auto-Reconciliation Date</label>
    <type>Date</type>
</CustomField>