unpackaged/main/default/objects/Bill_Run__c/fields/Auto_Reconciliation_Offset__c.field-meta.xml
<CustomField>
    <fullName>Auto_Reconciliation_Offset__c</fullName>
    <defaultValue>&quot;2&quot;</defaultValue>
    <description>The number of days between the Billing Date and when Auto Reconciliation should run</description>
    <inlineHelpText>The number of days between the Billing Date and when Auto Reconciliation should run</inlineHelpText>
    <label>No Days Before Auto Reconciliation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>7</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>