unpackaged/main/default/objects/Bill_Run__c/fields/Billing_Date__c.field-meta.xml
<CustomField>
    <fullName>Billing_Date__c</fullName>
    <description>Set the Billing Date or the Revenue Period End Date of Bill Run.</description>
    <inlineHelpText>Set the Billing Date or the Revenue Period End Date of Bill Run.</inlineHelpText>
    <label>Billing / Revenue Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>