unpackaged/main/default/objects/Bill_Run__c/fields/Calendar_Type__c.field-meta.xml
<CustomField>
    <fullName>Calendar_Type__c</fullName>
    <description>Calendar Type - can be Standard or Broadcast.</description>
    <inlineHelpText>Calendar Type - can be Standard or Broadcast.</inlineHelpText>
    <label>Calendar Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
                <default>true</default>
                <label>Standard</label>
            </value>
            <value>
                <fullName>Broadcast</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>