unpackaged/main/default/objects/Bill_Run__c/fields/Is_Auto_Reconciliation_Date__c.field-meta.xml
<CustomField>
    <fullName>Is_Auto_Reconciliation_Date__c</fullName>
    <formula>IF(ISNULL(Reference_Date__c), Auto_Reconciliation_Date__c &lt;= TODAY(), Auto_Reconciliation_Date__c &lt;= Reference_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Auto-Reconciliation Date</label>
    <type>Checkbox</type>
</CustomField>