unpackaged/main/default/objects/Bill_Run__c/fields/Is_Lock_Billing_Date__c.field-meta.xml
<CustomField>
    <fullName>Is_Lock_Billing_Date__c</fullName>
    <formula>If(ISNULL(Reference_Date__c), Lock_Billing_Date__c &lt;= TODAY(), Lock_Billing_Date__c &lt;= Reference_Date__c)</formula>
    <label>Is Lock Billing Date</label>
    <type>Checkbox</type>
</CustomField>