unpackaged/main/default/objects/Bill_Run__c/fields/Is_Release_to_Finance_Date__c.field-meta.xml
<CustomField>
    <fullName>Is_Release_to_Finance_Date__c</fullName>
    <formula>IF(ISNULL(Reference_Date__c), Release_to_Finance_Date__c &lt;= TODAY(), Release_to_Finance_Date__c &lt;= Reference_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Release to Finance Date</label>
    <type>Checkbox</type>
</CustomField>