unpackaged/main/default/objects/Bill_Run__c/fields/Lock_Billing_Date__c.field-meta.xml
<CustomField>
    <fullName>Lock_Billing_Date__c</fullName>
    <description>Date when Billing Schedule / Revenue Schedule Locking will occur.</description>
    <formula>Auto_Reconciliation_Date__c - 1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Date when Billing Schedule / Revenue Schedule Locking will occur.</inlineHelpText>
    <label>Locking Date</label>
    <type>Date</type>
</CustomField>