unpackaged/main/default/objects/Bill_Run__c/fields/Release_to_Finance_Date__c.field-meta.xml
<CustomField>
    <fullName>Release_to_Finance_Date__c</fullName>
    <formula>Auto_Reconciliation_Date__c + VALUE(TEXT(Release_to_Finance_Offset__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Release to Finance Date</label>
    <type>Date</type>
</CustomField>