unpackaged/main/default/objects/Bill_Run__c/fields/Release_to_Finance_Offset__c.field-meta.xml
<CustomField>
    <fullName>Release_to_Finance_Offset__c</fullName>
    <defaultValue>&quot;4&quot;</defaultValue>
    <description>The number of days between the Auto Reconciliation date and the Release to Finance Date</description>
    <inlineHelpText>The number of days between the Auto Reconciliation date and the Release to Finance Date</inlineHelpText>
    <label>No Days Before Finance Release</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>7</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>