unpackaged/main/default/objects/Bill_Run__c/fields/SObject_Type__c.field-meta.xml
<CustomField>
    <fullName>SObject_Type__c</fullName>
    <formula>IF(RecordType.Name == &#39;Billing&#39;, &#39;CS_Billing_Schedule_Item__c&#39;, &#39;CS_Revenue_Schedule_Item__c&#39;)</formula>
    <label>SObject Type</label>
    <type>Text</type>
</CustomField>