unpackaged/main/default/objects/Bill_Run__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Status of the Bill Run.</description>
    <inlineHelpText>Status of the Bill Run.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Scheduled</fullName>
                <default>true</default>
                <label>Scheduled</label>
            </value>
            <value>
                <fullName>Locking Bill Schedules</fullName>
            </value>
            <value>
                <fullName>Auto-Reconciliating</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Consolidating Actuals</fullName>
                <isActive>false</isActive>
                <label>Consolidating Actuals</label>
            </value>
            <value>
                <fullName>Recalculating Billing Schedules</fullName>
                <isActive>false</isActive>
                <label>Recalculating Billing Schedules</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>