unpackaged/main/default/objects/Bill_Run__c/recordTypes/Billing.recordType-meta.xml
<RecordType>
    <fullName>Billing</fullName>
    <active>true</active>
    <label>Billing</label>
</RecordType>