unpackaged/main/default/objects/Bill_Run__c/recordTypes/Revenue_Recognition.recordType-meta.xml
<RecordType>
    <fullName>Revenue_Recognition</fullName>
    <active>true</active>
    <label>Revenue Recognition</label>
</RecordType>